syntax = "proto3";

option go_package=".;pb";


package pb;

service ProductService {
  rpc GetProductDetail(GetProductDetailRequest) returns (GetProductDetailResponse) {}
}

message Product {
  string id = 1;
  string code = 2;
  string name = 3;
  string description = 4;
  string status = 5;
  string created_date = 6;
  string updated_date = 7;
}

message GetProductDetailRequest {
  string product_id = 1;
}

message GetProductDetailResponse {
  Meta meta = 1;
  Product data = 2;
}

message Meta {
  string code = 1;
  string message = 2;
}